--- a/src/assets/styles/components/_buttons.scss
+++ b/src/assets/styles/components/_buttons.scss
@@ -30,6 +30,16 @@
   }
 }
 
+.btn-danger {
+  background-color: red;
+
+  transition: background-color 0.3s ease-in-out;
+
+  &:hover {
+    background-color: darken($color: red, $amount: 10);
+  }
+}
+
 .btn-block {
   width: 100%;
 }
